fix: add article padding on desktop for readability

--- a/wp-content/themes/thestanforddaily/sass/site/primary/_posts-and-pages.scss
+++ b/wp-content/themes/thestanforddaily/sass/site/primary/_posts-and-pages.scss
@@ -79,6 +79,12 @@
 	}
 }
 
+@media only screen and (min-width: 769px) {
+	.entry-content {
+		padding: 0px 90px;
+	}
+}
+
 .author-box {
 	padding: 30px 20px;
 	background: #f5f5f5;
